@@ -964,6 +964,7 @@ Other memory:
 	* Add TELNETD front end to NSH (examples/nsh)
 	* Add a skeleton Ethernet device driver (drivers/net/skeleton.c)
 	* Added C5471 Ethernet device driver (arch/arm/src/c5471/c5471_ethernet.c)
+	* Improved utilization of read-ahead buffers
 </pre></ul>
 
 <table width ="100%">
