@@ -268,3 +268,4 @@
 	* Implemented send() timeout logic
 	* Add a skeleton Ethernet device driver (drivers/net/skeleton.c)
 	* Added C5471 Ethernet device driver (arch/arm/src/c5471/c5471_ethernet.c)
+	* Improved utilization of read-ahead buffers
